utilidades para ordenar diccionarios

--- a/Python/Notebooks/Operaciones_y_metodos_con_Listas.ipynb
+++ b/Python/Notebooks/Operaciones_y_metodos_con_Listas.ipynb
@@ -33,7 +33,7 @@
     {
      "data": {
       "text/plain": [
-       "['<', '=', '>', '=', '<', 'A', '?', 'B', '?', '?']"
+       "['<', '=', '>', '=', '<', '>', 'B', 'C', '=', '>']"
       ]
      },
      "execution_count": 2,
@@ -1130,7 +1130,7 @@
     {
      "data": {
       "text/plain": [
-       "(2998949359296, 2998948991936, 2998949293248, 2998949293248)"
+       "(2291729429056, 2291729196096, 2291729477056, 2291729477056)"
       ]
      },
      "execution_count": 41,
@@ -1167,7 +1167,7 @@
     {
      "data": {
       "text/plain": [
-       "(2998949359296, 2998948991936, 2998949079872, 2998949293248)"
+       "(2291729429056, 2291729196096, 2291729318528, 2291729477056)"
       ]
      },
      "execution_count": 43,
@@ -1399,12 +1399,12 @@
    "metadata": {},
    "source": [
     "# <center> LIST COMPREHENSION</center>\n",
-    "## <center> LISTAS, TUPLAS, CONJUNTOS, DICCIONARIOS, CADENAS, GENERADORES</center>"
+    "## <center> LISTAS, CON CASTING A TUPLAS, CONJUNTOS, DICCIONARIOS, CADENAS, GENERADORES</center>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1420,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1452,7 @@
        "[0, 2, 4, 6, 8]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1485,7 @@
        "[0, 1, 2, 9, 4, 25, 6, 49, 8, 81]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1504,14 +1504,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6, 8]\n"
+      "(6, 8)\n"
      ]
     },
     {
@@ -1520,7 +1520,7 @@
        "(6, 8)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,20 +1531,21 @@
     "    if i%2 == 0 and i > 5:\n",
     "        valor.append(i)\n",
     "\n",
-    "print(valor)\n",
-    "tuple([i for i in range(10) if i%2 == 0 if i > 5])"
+    "print(tuple(valor))\n",
+    "tuple(i for i in range(10) if i%2 == 0 if i > 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, -1, -1, 3, True, 10, 6, -1, True, 9, 20]\n",
+      "{False, 1, '', None}\n",
+      "{0, True, 3, 6, 9, 10, 20, -1}\n",
       "{0, True, 3, 6, 9, 10, 20, -1}\n"
      ]
     },
@@ -1554,7 +1555,7 @@
        "{-1, 0, True, 3, 6, 9, 10, 20}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,14 +1572,16 @@
     "    else:\n",
     "        valor.append(-1)\n",
     "\n",
-    "print(valor)\n",
-    "print(set([i if i%3 ==0 else i%4 == 0 if i%4 == 0 else i*2 if i%5==0 else -1 for i in range(11)]))\n",
+    "print(set([1,True,False,0,None,'']))\n",
+    "print(set(valor))\n",
+    "print(set(i if i%3 ==0 else i%4 == 0 if i%4 == 0 else i*2 if i%5==0 else -1 for i in range(11)))\n",
+    "\n",
     "{i if i%3 ==0 else i%4 == 0 if i%4 == 0 else i*2 if i%5==0 else -1 for i in range(11)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1591,10 +1594,10 @@
     {
      "data": {
       "text/plain": [
-       "<generator object <genexpr> at 0x000002BA3F4DE420>"
+       "<generator object <genexpr> at 0x0000021595B6A880>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1630,7 @@
        "'@ABCDEFGHIJKLMNOPQRSTUVWXYZ'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1642,6 +1645,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">## <center> ORDENAR DICCIONARIO POR KEY ASCENDENTE x[0]</center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{102: 4, 104: 4, 108: 3, 110: 5, 117: 8, 127: 3, 131: 8, 132: 2, 133: 9, 136: 9, 139: 1, 144: 4, 145: 6, 150: 4, 154: 2, 159: 10, 160: 4, 164: 10, 175: 1, 181: 2, 182: 9, 184: 7, 187: 5, 192: 5, 193: 5, 195: 3, 196: 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = {random.randint(100,200):random.randint(1,10) for i in range(30)}\n",
+    "numeros_ordenados = dict(sorted(numeros.items(), key=lambda x: x[0], reverse=False)) # ordena las keys de menor a mayor\n",
+    "print(numeros_ordenados)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <center> ORDENAR DICCIONARIO POR KEY DESCENDENTE x[0]</center>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -1650,27 +1688,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{101: 3, 107: 9, 113: 9, 114: 10, 120: 5, 121: 7, 125: 7, 132: 6, 139: 9, 143: 10, 144: 8, 152: 10, 155: 2, 158: 2, 160: 2, 161: 1, 162: 2, 163: 2, 173: 6, 175: 10, 177: 5, 178: 7, 182: 5, 184: 9, 196: 7, 197: 1, 198: 1}\n"
+      "{199: 7, 196: 2, 195: 3, 194: 3, 193: 2, 186: 7, 184: 9, 183: 1, 182: 6, 178: 10, 177: 6, 175: 1, 171: 4, 160: 2, 156: 10, 151: 3, 140: 9, 137: 3, 136: 7, 132: 4, 127: 3, 125: 10, 123: 10, 113: 9, 112: 3, 104: 2, 103: 4}\n"
      ]
     }
    ],
    "source": [
     "numeros = {random.randint(100,200):random.randint(1,10) for i in range(30)}\n",
-    "numeros_ordenados = dict(sorted(numeros.items(), key=lambda x: x[0], reverse=False))\n",
+    "numeros_ordenados = dict(sorted(numeros.items(), key=lambda x: x[0], reverse=True)) # ordena las keys de mayor a menor \n",
     "print(numeros_ordenados)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <center> ORDENAR DICCIONARIO POR VALUE ASCENDENTE x[1] Y KEY POR VALOR ASCENDENTE x[0]</center>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{125: 1, 113: 2, 119: 2, 130: 2, 152: 2, 173: 2, 188: 3, 190: 3, 154: 4, 165: 4, 118: 5, 135: 5, 164: 5, 104: 6, 112: 6, 174: 7, 101: 8, 103: 8, 172: 8, 108: 9, 140: 9, 187: 9, 111: 10, 122: 10, 181: 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = {random.randint(100,200):random.randint(1,10) for i in range(30)}\n",
+    "numeros_ordenados = dict(sorted(numeros.items(), key=lambda x: x[0], reverse=False)) # ordena las keys de menor a mayor\n",
+    "numeros_ordenados = dict(sorted(numeros_ordenados.items(), key=lambda x: x[1], reverse=False)) # ordena los values de menor a mayor\n",
+    "print(numeros_ordenados)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <center> ORDENAR DICCIONARIO POR VALUE DESCENDENTE x[1] Y KEY POR VALOR ASCENDENTE x[0]</center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[114, 143, 152, 175]\n",
-      "[161, 197, 198]\n"
+      "{104: 10, 132: 10, 133: 10, 155: 10, 164: 9, 165: 9, 121: 8, 142: 8, 176: 8, 178: 8, 108: 7, 116: 7, 166: 7, 135: 6, 192: 5, 183: 4, 102: 2, 129: 2, 143: 2, 191: 2, 106: 1, 123: 1, 159: 1, 184: 1, 189: 1, 199: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = {random.randint(100,200):random.randint(1,10) for i in range(30)}\n",
+    "numeros_ordenados = dict(sorted(numeros.items(), key=lambda x: x[0], reverse=False)) # ordena las keys menor a mayor \n",
+    "numeros_ordenados = dict(sorted(numeros_ordenados.items(), key=lambda x: x[1], reverse=True)) # ordena los values de mayor a menor\n",
+    "print(numeros_ordenados)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <center> MAXIMAS Y MINIMAS REPETICIONES DE UN NUMERO EN LA LISTA</center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[104, 132, 133, 155]\n",
+      "[106, 123, 159, 184, 189, 199]\n"
      ]
     }
    ],
@@ -1685,15 +1786,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <center> MAXIMAS Y MINIMAS REPETICIONES DE UNA CADENA EN LA LISTA</center>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: '@B', 2: 'CB', 4: 'BA', 6: 'CB', 7: '@D', 8: '@B', 10: 'DC', 11: 'CA', 12: 'DC', 14: 'AD', 18: 'DD', 19: '@@', 20: '@@', 28: 'C@', 29: 'DB', 30: 'BA', 31: 'DD', 32: 'BD', 33: '@@', 34: 'CD', 36: '@A', 37: 'AA', 38: 'C@', 39: '@B', 40: 'BB', 41: '@C', 42: 'BA', 43: 'AB', 45: '@@', 46: 'BC', 48: 'AC'}\n"
+      "{1: 'DD', 2: 'AD', 3: 'D@', 5: 'AD', 6: 'CA', 7: 'C@', 8: 'CD', 9: 'AA', 13: 'BC', 14: 'DC', 17: 'DB', 18: 'D@', 19: '@D', 20: 'DB', 24: 'AA', 25: 'AD', 27: 'BB', 28: 'BD', 29: '@D', 30: 'CC', 31: '@A', 32: '@C', 33: 'CB', 34: 'C@', 36: 'CA', 40: 'DB', 41: 'B@', 42: 'CD', 48: 'BA', 50: 'DC'}\n"
      ]
     }
    ],
@@ -1706,15 +1814,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[18, 31]\n",
-      "[19, 20, 33, 45]\n"
+      "[1]\n",
+      "[31]\n"
      ]
     }
    ],
@@ -1737,51 +1845,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "a,b = 2, 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a if a>b else b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "()"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0 or False or None or '' or [] or {} or ()"
    ]
   },
   {
@@ -1792,7 +1860,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "10"
       ]
      },
      "execution_count": 65,
@@ -1801,7 +1869,7 @@
     }
    ],
    "source": [
-    "a>b and a"
+    "a if a>b else b"
    ]
   },
   {
@@ -1812,7 +1880,7 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "()"
       ]
      },
      "execution_count": 66,
@@ -1821,7 +1889,7 @@
     }
    ],
    "source": [
-    "a>b and a or b"
+    "0 or False or None or '' or [] or {} or ()"
    ]
   },
   {
@@ -1832,7 +1900,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "False"
       ]
      },
      "execution_count": 67,
@@ -1841,7 +1909,7 @@
     }
    ],
    "source": [
-    "a<b and a or b"
+    "a>b and a"
    ]
   },
   {
@@ -1852,7 +1920,7 @@
     {
      "data": {
       "text/plain": [
-       "''"
+       "10"
       ]
      },
      "execution_count": 68,
@@ -1861,7 +1929,7 @@
     }
    ],
    "source": [
-    "a>b and b or 1 and True and b-b and b*2 or ''"
+    "a>b and a or b"
    ]
   },
   {
@@ -1872,10 +1940,50 @@
     {
      "data": {
       "text/plain": [
-       "20"
+       "2"
       ]
      },
      "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a<b and a or b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a>b and b or 1 and True and b-b and b*2 or ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
