adicionados datos json

--- a/Python/DB/SQL_DML.ipynb
+++ b/Python/DB/SQL_DML.ipynb
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ea8dadff91268795ea7f8391b80b27cf010b73830cbc60b208f816c239fb847d\n"
+      "02e3f359bdbfb23e4dd6d13718609e0d31c03fc86b07caf7addbc79867d41f9e\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9e15ba0c75a3bac344d31f1efa452f1463d7a4cb1ac9ea47ead51f4bbb664369\n"
+      "3ede0a1506cf5b8fb370c8bbef0f35aed365b20351f302a1cb44d55b9afe2d33\n"
      ]
     }
    ],
@@ -153,9 +153,9 @@
      "output_type": "stream",
      "text": [
       "CONTAINER ID   IMAGE                  COMMAND                  CREATED         STATUS                    PORTS                               NAMES\n",
-      "9e15ba0c75a3   mysql                  \"docker-entrypoint.sâ€¦\"   1 second ago    Up Less than a second     33060/tcp, 0.0.0.0:3333->3306/tcp   jorgecardona-mysql\n",
-      "ea8dadff9126   postgres               \"docker-entrypoint.sâ€¦\"   3 seconds ago   Up 2 seconds              0.0.0.0:5555->5432/tcp              jorgecardona-postgres\n",
-      "681b3f9836dd   jorgecardona/jupyter   \"/bin/sh -c 'jupyterâ€¦\"   2 weeks ago     Exited (130) 3 days ago                                       lab\n"
+      "3ede0a1506cf   mysql                  \"docker-entrypoint.sâ€¦\"   2 seconds ago   Up Less than a second     33060/tcp, 0.0.0.0:3333->3306/tcp   jorgecardona-mysql\n",
+      "02e3f359bdbf   postgres               \"docker-entrypoint.sâ€¦\"   3 seconds ago   Up 1 second               0.0.0.0:5555->5432/tcp              jorgecardona-postgres\n",
+      "681b3f9836dd   jorgecardona/jupyter   \"/bin/sh -c 'jupyterâ€¦\"   4 weeks ago     Exited (255) 3 days ago   0.0.0.0:8888->8888/tcp              lab\n"
      ]
     }
    ],
@@ -241,19 +241,19 @@
       "'MySQL CONNECTION'\n",
       "{'_compiled_cache': {},\n",
       " '_echo': None,\n",
-      " 'dialect': <sqlalchemy.dialects.mysql.pymysql.MySQLDialect_pymysql object at 0x0000026BE6FAC310>,\n",
+      " 'dialect': <sqlalchemy.dialects.mysql.pymysql.MySQLDialect_pymysql object at 0x0000019F6A104790>,\n",
       " 'hide_parameters': False,\n",
       " 'logger': <Logger sqlalchemy.engine.Engine (WARNING)>,\n",
-      " 'pool': <sqlalchemy.pool.impl.QueuePool object at 0x0000026BE862FFD0>,\n",
+      " 'pool': <sqlalchemy.pool.impl.QueuePool object at 0x0000019F6B7C1AE0>,\n",
       " 'url': mysql+pymysql://admin:***@localhost:3333/digitos}\n",
       "'-----------------------------------------------'\n",
       "'PostgreSQL CONNECTION'\n",
       "{'_compiled_cache': {},\n",
       " '_echo': None,\n",
-      " 'dialect': <sqlalchemy.dialects.postgresql.psycopg2.PGDialect_psycopg2 object at 0x0000026BE873B010>,\n",
+      " 'dialect': <sqlalchemy.dialects.postgresql.psycopg2.PGDialect_psycopg2 object at 0x0000019F6B8D01C0>,\n",
       " 'hide_parameters': False,\n",
       " 'logger': <Logger sqlalchemy.engine.Engine (WARNING)>,\n",
-      " 'pool': <sqlalchemy.pool.impl.QueuePool object at 0x0000026BE8813370>,\n",
+      " 'pool': <sqlalchemy.pool.impl.QueuePool object at 0x0000019F6B96BF40>,\n",
       " 'url': postgresql+psycopg2://admin:***@localhost:5555/digitos}\n"
      ]
     }
@@ -1110,12 +1110,12 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>digitos</td>\n",
-       "      <td>universo</td>\n",
+       "      <td>info</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>digitos</td>\n",
-       "      <td>info</td>\n",
+       "      <td>universo</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1124,8 +1124,8 @@
       "text/plain": [
        "  TABLE_SCHEMA TABLE_NAME\n",
        "0      digitos    colores\n",
-       "1      digitos   universo\n",
-       "2      digitos       info"
+       "1      digitos       info\n",
+       "2      digitos   universo"
       ]
      },
      "execution_count": 18,
@@ -3173,22 +3173,22 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3197,10 +3197,10 @@
       ],
       "text/plain": [
        "   cifras  cifras\n",
-       "0       1       2\n",
-       "1       3       1\n",
-       "2       4       3\n",
-       "3       2       4"
+       "0       3       2\n",
+       "1       4       1\n",
+       "2       2       3\n",
+       "3       1       4"
       ]
      },
      "execution_count": 33,
@@ -11063,7 +11063,7 @@
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>48344</td>\n",
+       "      <td>48318</td>\n",
        "      <td>100.0</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
@@ -11076,7 +11076,7 @@
        "0   1      SIMPLE  particion_rango  pInicios,p2020,p2021,pActuales  ALL   \n",
        "\n",
        "  possible_keys   key key_len   ref   rows  filtered Extra  \n",
-       "0          None  None    None  None  48344     100.0  None  "
+       "0          None  None    None  None  48318     100.0  None  "
       ]
      },
      "execution_count": 76,
@@ -12942,8 +12942,8 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>2019.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>41.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>61.0</td>\n",
        "      <td>1</td>\n",
        "      <td>2019</td>\n",
        "      <td>1</td>\n",
@@ -12952,9 +12952,9 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>41.0</td>\n",
+       "      <td>2021.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>28.0</td>\n",
        "      <td>1</td>\n",
        "      <td>2019</td>\n",
        "      <td>2</td>\n",
@@ -12963,9 +12963,9 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>40.0</td>\n",
+       "      <td>2022.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>95.0</td>\n",
        "      <td>1</td>\n",
        "      <td>2019</td>\n",
        "      <td>3</td>\n",
@@ -12975,8 +12975,8 @@
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>2019.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>36.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>40.0</td>\n",
        "      <td>1</td>\n",
        "      <td>2019</td>\n",
        "      <td>4</td>\n",
@@ -12985,9 +12985,9 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>61.0</td>\n",
+       "      <td>2021.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>58.0</td>\n",
        "      <td>1</td>\n",
        "      <td>2019</td>\n",
        "      <td>5</td>\n",
@@ -13008,8 +13008,8 @@
        "      <th>2395</th>\n",
        "      <td>50</td>\n",
        "      <td>2022.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>82.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>67.0</td>\n",
        "      <td>50</td>\n",
        "      <td>2022</td>\n",
        "      <td>8</td>\n",
@@ -13018,9 +13018,9 @@
        "    <tr>\n",
        "      <th>2396</th>\n",
        "      <td>50</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>67.0</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>52.0</td>\n",
        "      <td>50</td>\n",
        "      <td>2022</td>\n",
        "      <td>9</td>\n",
@@ -13029,9 +13029,9 @@
        "    <tr>\n",
        "      <th>2397</th>\n",
        "      <td>50</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>109.0</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>33.0</td>\n",
        "      <td>50</td>\n",
        "      <td>2022</td>\n",
        "      <td>10</td>\n",
@@ -13041,8 +13041,8 @@
        "      <th>2398</th>\n",
        "      <td>50</td>\n",
        "      <td>2022.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>102.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>108.0</td>\n",
        "      <td>50</td>\n",
        "      <td>2022</td>\n",
        "      <td>11</td>\n",
@@ -13051,9 +13051,9 @@
        "    <tr>\n",
        "      <th>2399</th>\n",
        "      <td>50</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>58.0</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>50.0</td>\n",
        "      <td>50</td>\n",
        "      <td>2022</td>\n",
        "      <td>12</td>\n",
@@ -13066,17 +13066,17 @@
       ],
       "text/plain": [
        "      usuario    anio   mes  total_horas  USUARIO  ANIO  MES  TOTAL_HORAS\n",
-       "0           1  2019.0   1.0         41.0        1  2019    1         41.0\n",
-       "1           1  2019.0   2.0         41.0        1  2019    2         41.0\n",
-       "2           1  2019.0   3.0         40.0        1  2019    3         40.0\n",
-       "3           1  2019.0   4.0         36.0        1  2019    4         36.0\n",
-       "4           1  2019.0   5.0         61.0        1  2019    5         61.0\n",
+       "0           1  2019.0   5.0         61.0        1  2019    1         41.0\n",
+       "1           1  2021.0  12.0         28.0        1  2019    2         41.0\n",
+       "2           1  2022.0   2.0         95.0        1  2019    3         40.0\n",
+       "3           1  2019.0   3.0         40.0        1  2019    4         36.0\n",
+       "4           1  2021.0   4.0         58.0        1  2019    5         61.0\n",
        "...       ...     ...   ...          ...      ...   ...  ...          ...\n",
-       "2395       50  2022.0   8.0         82.0       50  2022    8         82.0\n",
-       "2396       50  2022.0   9.0         67.0       50  2022    9         67.0\n",
-       "2397       50  2022.0  10.0        109.0       50  2022   10        109.0\n",
-       "2398       50  2022.0  11.0        102.0       50  2022   11        102.0\n",
-       "2399       50  2022.0  12.0         58.0       50  2022   12         58.0\n",
+       "2395       50  2022.0   9.0         67.0       50  2022    8         82.0\n",
+       "2396       50  2020.0  10.0         52.0       50  2022    9         67.0\n",
+       "2397       50  2019.0   9.0         33.0       50  2022   10        109.0\n",
+       "2398       50  2022.0   2.0        108.0       50  2022   11        102.0\n",
+       "2399       50  2020.0   4.0         50.0       50  2022   12         58.0\n",
        "\n",
        "[2400 rows x 8 columns]"
       ]
@@ -13101,7 +13101,6 @@
     "\n",
     "    FROM horarios\n",
     "        GROUP BY ANIO, MES, DIA, USUARIO, NOMBRE_DIA, NOMBRE_MES, DIA_SEMANA\n",
-    "    ORDER BY USUARIO, ANIO, MES, DIA DESC\n",
     ")\n",
     "SELECT USUARIO, ANIO, MES, SUM(HORAS) AS TOTAL_HORAS\n",
     "    FROM AGRUPAR_DIA\n",
@@ -13320,7 +13319,6 @@
     "\n",
     "    FROM horarios\n",
     "        GROUP BY ANIO, MES, DIA, USUARIO, NOMBRE_DIA, NOMBRE_MES, DIA_SEMANA\n",
-    "    ORDER BY USUARIO, ANIO, MES, DIA DESC\n",
     "),\n",
     "AGRUPAR_MES AS (\n",
     "    SELECT USUARIO, ANIO, MES, SUM(HORAS) AS TOTAL_HORAS\n",
@@ -13972,7 +13970,6 @@
     "        FROM horarios\n",
     "            GROUP BY ANIO, MES, DIA, USUARIO, NOMBRE_DIA, NOMBRE_MES, DIA_SEMANA\n",
     "        HAVING EXTRACT(DOW FROM fecha_reportada) = 0 or EXTRACT(DOW FROM fecha_reportada) = 6\n",
-    "            ORDER BY ANIO, MES\n",
     ")\n",
     "SELECT USUARIO, ANIO, NOMBRE_MES, SUM(HORAS) AS TOTAL_HORAS\n",
     "    FROM AGRUPAR_DIA\n",
@@ -13995,7 +13992,6 @@
     "    FROM horarios\n",
     "        GROUP BY ANIO, MES, DIA, USUARIO, NOMBRE_DIA, NOMBRE_MES, DIA_SEMANA\n",
     "    HAVING DIA_SEMANA = 1 OR DIA_SEMANA = 7\n",
-    "        ORDER BY ANIO, MES\n",
     ")\n",
     "SELECT USUARIO, ANIO, NOMBRE_MES, SUM(HORAS) AS TOTAL_HORAS\n",
     "    FROM AGRUPAR_DIA\n",
@@ -14194,7 +14190,6 @@
     "        FROM horarios\n",
     "            GROUP BY ANIO, MES, DIA, USUARIO, NOMBRE_DIA, NOMBRE_MES, DIA_SEMANA\n",
     "        HAVING EXTRACT(DOW FROM fecha_reportada) = 0 or EXTRACT(DOW FROM fecha_reportada) = 6\n",
-    "            ORDER BY ANIO, MES\n",
     ")\n",
     "SELECT USUARIO, ANIO, SUM(HORAS) AS TOTAL_HORAS\n",
     "    FROM AGRUPAR_DIA\n",
@@ -14217,7 +14212,6 @@
     "    FROM horarios\n",
     "        GROUP BY ANIO, MES, DIA, USUARIO, NOMBRE_DIA, NOMBRE_MES, DIA_SEMANA\n",
     "    HAVING DIA_SEMANA = 1 OR DIA_SEMANA = 7\n",
-    "        ORDER BY ANIO, MES\n",
     ")\n",
     "SELECT USUARIO, ANIO, SUM(HORAS) AS TOTAL_HORAS\n",
     "    FROM AGRUPAR_DIA\n",
@@ -16274,22 +16268,22 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -16298,10 +16292,10 @@
       ],
       "text/plain": [
        "   cifras  cifras\n",
-       "0       1       2\n",
-       "1       3       1\n",
-       "2       4       3\n",
-       "3       2       4"
+       "0       3       2\n",
+       "1       4       1\n",
+       "2       2       3\n",
+       "3       1       4"
       ]
      },
      "execution_count": 109,
@@ -18484,8 +18478,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CONTAINER ID   IMAGE                  COMMAND                  CREATED       STATUS                    PORTS     NAMES\n",
-      "681b3f9836dd   jorgecardona/jupyter   \"/bin/sh -c 'jupyterâ€¦\"   2 weeks ago   Exited (130) 3 days ago             lab\n"
+      "CONTAINER ID   IMAGE                  COMMAND                  CREATED       STATUS                    PORTS                    NAMES\n",
+      "681b3f9836dd   jorgecardona/jupyter   \"/bin/sh -c 'jupyterâ€¦\"   4 weeks ago   Exited (255) 3 days ago   0.0.0.0:8888->8888/tcp   lab\n"
      ]
     }
    ],
@@ -18513,9 +18507,11 @@
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import random \n",
     "from datetime import datetime, timedelta, date\n",
-    "\n",
+    "import json\n",
+    "import string\n",
     "\n",
     "def generador_limites_tiempo(iteracion):\n",
     "    \n",
@@ -18585,11 +18581,44 @@
     "        \n",
     "    return final_list\n",
     "        \n",
-    "def generar_cadena_query()->str:\n",
+    "def get_random_string(total_muestras):\n",
     "    \n",
-    "    lista_usuarios_fechas = generador_lista_fechas_y_usuarios(30000)\n",
+    "    palabras = []\n",
+    "    \n",
+    "    for i in range(total_muestras):\n",
+    "    \n",
+    "        length = random.randint(20,50)\n",
+    "        letters = string.ascii_letters\n",
+    "        palabras.append(''.join(random.choice(letters) for i in range(length)))\n",
+    "        \n",
+    "    return palabras\n",
+    "    \n",
+    "    \n",
+    "def generar_cadena_query(data:str)->str:\n",
+    "    \n",
+    "    total_muestras = 50000\n",
+    "    \n",
+    "    lista_usuarios_fechas = generador_lista_fechas_y_usuarios(total_muestras)\n",
     "    lista_validada = eliminar_listas_duplicadas(lista_usuarios_fechas)\n",
     "    lista_para_insert = generar_lista_para_insert(lista_validada)\n",
+    "    \n",
+    "    if data == 'json':\n",
+    "        \n",
+    "        total_muestras = len(lista_para_insert)\n",
+    "        \n",
+    "        letras = get_random_string(total_muestras)\n",
+    "        \n",
+    "        values = pd.DataFrame(columns=['id','user_id','marked_date'], data=lista_para_insert)\n",
+    "        values['transaction_hash'] = letras\n",
+    "        values = values.reset_index().to_json(orient='records')\n",
+    "            \n",
+    "        json_file = json.loads(values)\n",
+    "       \n",
+    "                        \n",
+    "        with open('data_sql.json', 'w') as f:\n",
+    "            json.dump(json_file, f)\n",
+    "        \n",
+    "        return json_file\n",
     "    \n",
     "    return str(lista_para_insert).replace('[',' VALUES ').replace(']',';')"
    ]
@@ -18604,13 +18633,13 @@
    },
    "outputs": [],
    "source": [
-    "generar_cadena_query()"
+    "generar_cadena_query('json')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58647e50-32be-4645-9dba-779a7d5d04ef",
+   "id": "4b3958aa-aecb-42b9-92aa-5179b2626d2b",
    "metadata": {},
    "outputs": [],
    "source": []
